update hello world

--- a/data/blog/hello-world.mdx
+++ b/data/blog/hello-world.mdx
@@ -9,16 +9,16 @@ Hey! I'm Robbie.
 
 I am a software enthusiast on a journey to become a developer.
 
-The purpose of this blog will be to document my success and struggles as I build a portfolio of projects.
+The goal of this blog is document my success and struggles as I build a portfolio of projects.
 
 ## What's the plan?
 
-I have an idea. I have always contributed to open source over the years, however I deleted my GitHub account a few years back.. so no proof. I have also participated in the development of a production web app, which is now defunct and out of business.. So it is time to build some lasting demonstration of my abilities.
+I had an idea. I have contributed to open source over the years and built plenty of personal projects, however I deleted my GitHub account a few years back.. so no proof. I have run numerous applications and services in the wild, including a DNS pair, chat servers forums, and many more just using Docker containers. I have also participated in the development of a production web app, which is now defunct and out of business.. And for a short time I also got paid to work on a hybrid open-source/paid service.
 
-The experiment will be to build a number of products using technologies I am only vaguely familiar with. Proving that I am able learn new things at the same time as building a portfolio.
+The experiment will be to build a number of applications using technologies I am only vaguely familiar with. Proving that I am not only able learn new things, but also to build a portfolio.
 
 ## What's first?
 
-I will build a store front, using NodeJS and React. Might as well also use TypeScript while I'm at it.
+I will start by building a storefront, using NodeJS and React. Might as well also use TypeScript while I'm at it.
 
 The MVP will include: items, basic inventory, administration, authentication, checkout and payment processing.
