--- a/data/blog/javascript-again.mdx
+++ b/data/blog/javascript-again.mdx
@@ -7,7 +7,7 @@ summary: Learning Javascript again, just to refresh and get back up to speed.
 
 The title say's it all. I have used JS a bunch in the past, but not much at all for a few years. So starting from 0, learning what's new and seeing how fast I get back up to speed. This is The Experiment.
 
-I will begin next week, with [The Odin Project](https://theodinproject.com). It's more self driven than something like Free Code Camp which is suitable as I already have a solid base. I'm currently running through the introductory course material and will begin the Full Stack Javascript pathway next week. I aim to post weekly updates, using the title style EXW00 - Some Context. Short for the EXperiment Week 00-99, obviously I do not aim to take 99 weeks to complete this.
+I will begin next week, with [The Odin Project](https://theodinproject.com). It's more self driven than something like Free Code Camp which is suitable as I already have a solid base. I'm currently running through the introductory course material and will begin the Full Stack Javascript pathway in the next couple of weeks, before the end of December. I aim to post weekly updates, using the title style EXW00 - Some Context. Short for the EXperiment Week 00-99, obviously I do not aim to take 99 weeks to complete this.
 
 Until next time,\
 ~robbie
